fix(survey-card): use design padding and card spacing

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -131,7 +131,7 @@
 
 .highlights__row {
   display: flex;
-  justify-content: space-between;
+  gap: 32px;
   padding-top: 32px;
 }
 
