--- a/src/app/shared/components/survey-card/survey-card.scss
+++ b/src/app/shared/components/survey-card/survey-card.scss
@@ -4,7 +4,7 @@
   gap: 10px;
   width: 321px;
   height: 310px;
-  padding: 40px 18px;
+  padding: 40px;
   border-radius: 0 80px 0 0;
   background-color: var(--color-bg-card);
   color: var(--color-primary-purple);
